--- a/AppointmentSys/.project
+++ b/AppointmentSys/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SEC</name>
+	<name>AppointmentSys</name>
 	<comment></comment>
 	<projects>
 	</projects>
